name:           has-lens
version:        0.1
synopsis:       Overloaded lenses and prisms for record fields and constructors.
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Data
cabal-version:  >= 1.6
build-type:     Simple
homepage:       http://github.com/duairc/has-lens
bug-reports:    http://github.com/duairc/has-lens/issues

extra-source-files:
  CONTRIBUTORS,
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Control.Lens.Has

  build-depends:
    base >= 2 && < 5

  if impl(ghc < 7.6)
    build-depends:
      symbols >= 0.1 && < 0.2


  ghc-options: -Wall

source-repository head
  type:     git
  location: http://github.com/duairc/has-lens
